# breve

./: .gitignore  README.md  app.js  db_handler.go  go.mod  go.sum  index.html  load.sql  main.go  package-lock.json  package.json  privacy_policy.html  url_shortener.go
.github/workflows/: static.yml
handlers/: handler.go
routes/: index.js
src/: App.vue  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  data_store.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: generate_text.rs  lib.rs  main.rs
src-tauri/src/config/: config_handler.rs  mod.rs  path_resolver.rs
src-tauri/src/configuration/: controller.rs  models.rs  repository.rs
src-tauri/src/controllers/: conversation_controller.rs  mod.rs  settings_controller.rs
src-tauri/src/conversation/: controller.rs  models.rs  repository.rs  service.rs
src-tauri/src/dao/: conversation_dao.rs  mod.rs  settings_dao.rs
src-tauri/src/inference/: models.rs  service.rs
src-tauri/src/infrastructure/: app.rs  config.rs  consts.rs  context.rs  controller.rs  database.rs  mod.rs  repository.rs  service.rs
src-tauri/src/models/: controller.rs  conversation.rs  inference.rs  mod.rs  model_fetcher.rs  models.rs  service.rs
src-tauri/src/settings/: controller.rs  mod.rs  models.rs  repository.rs  service.rs
src/components/: ChatContainer.vue  DownloadPage.vue  DownloadingModel.vue  ImportModel.vue  InferenceSettings.vue  MessageInput.vue  MessageList.vue  ModelCard.vue  ModelList.vue  ModelPickInit.vue  ModelPicker.vue  Models.vue  ModelsDownload.vue  Settings.vue  SettingsPanel.vue  Sidebar.vue
src/composables/: useConversations.ts  useSettings.ts
store/: store.go
view/: index.html
views/: index.pug  sidebar.pug
