[package]
name = "breve"
version = "0.1.0"
description = "Breve is a personal assistant that runs locally on your device"
authors = ["div"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "breve_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
uuid = { version = "1.16.0", features = ["v4"] }
encoding_rs = "0.8.35"
llama-cpp-2 = "0.1.121"
opencl3 = "0.12"
anyhow = "1.0.100"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.6"
